--- a/bibliography/library.bib
+++ b/bibliography/library.bib
@@ -792,3 +792,38 @@ doi = {10.1137/22M1473960}
   journal={arXiv preprint arXiv:2403.10555},
   year={2024}
 }
+
+@article{kidger2020neural,
+  title={Neural controlled differential equations for irregular time series},
+  author={Kidger, Patrick and Morrill, James and Foster, James and Lyons, Terry},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={6696--6707},
+  year={2020}
+}
+
+@article{loshchilov2017fixing,
+  title={Fixing weight decay regularization in adam},
+  author={Loshchilov, Ilya and Hutter, Frank and others},
+  journal={arXiv preprint arXiv:1711.05101},
+  volume={5},
+  year={2017}
+}
+
+@article{tsitouras2011runge,
+  title={Runge--Kutta pairs of order 5 (4) satisfying only the first column simplifying assumption},
+  author={Tsitouras, Ch},
+  journal={Computers \& Mathematics with Applications},
+  volume={62},
+  number={2},
+  pages={770--775},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{matsuda2024polynomial,
+  title={Polynomial approximation of noisy functions},
+  author={Matsuda, Takeru and Nakatsukasa, Yuji},
+  journal={arXiv preprint arXiv:2410.02317},
+  year={2024}
+}
